# pystate

./: README.md  pyproject.toml
pystate/: __init__.py
state_machine/: _sm_.py  sm.py
