[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reframectrl"
version = "1.0.0"
authors = [
    {name = "A.H.G.Overbeek", email = "a.h.g.overbeek@utwente.nl"},
    {name = "M.Vlutters", email = "m.vlutters@utwente.nl"}
]
description="Wrench control using interaction frames."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
]
