[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reframectrl"
version = "1.0.0"
authors = [
    {name = "M.Vlutters", email = "m.vlutters@utwente.nl"}
]
description="Basic state machine in pure python."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
]
